welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:16: error: Missing closing brace `}' assumed here
}
^ColumnByColumn:18: error: expected class or object definition
def positionFinale(a:Int, b:Int):Boolean = {
^